--- a/src/main/web/css/xiaomi.css
+++ b/src/main/web/css/xiaomi.css
@@ -413,31 +413,39 @@ html table {
   transition: all 3s;
   -webkit-transition: all 1s;
   -moz-transition: all 1s;
-  -ms-transition: all 1s; }
+  -ms-transition: all 1s;
+}
 #main_show_box .floor_goods_wrap ul li a {
-  display: block; }
+  display: block;
+}
 #main_show_box .floor_goods_wrap ul li a:hover {
-  text-decoration: none; }
+  text-decoration: none;
+}
 #main_show_box .floor_goods_wrap ul li a:nth-child(2) {
   font-size: 15px;
   margin-top: 15px;
-  color: #424242; }
+  color: #424242;
+}
 #main_show_box .floor_goods_wrap ul li a:nth-child(3) {
   font-size: 12px;
   margin-top: 5px;
-  color: #BEBEBE; }
+  color: #BEBEBE;
+}
 #main_show_box .floor_goods_wrap ul li a:nth-child(4) {
   font-size: 15px;
   margin-top: 15px;
-  color: #FF6700; }
+  color: #FF6700;
+}
 
 #foot_box {
   width: 100%;
-  height: 280px; }
+  height: 280px;
+}
 #foot_box #foot_wrap {
   width: 1226px;
   margin: 0 auto;
-  overflow: hidden; }
+  overflow: hidden;
+}
 #foot_box #foot_wrap .foot_top {
   width: 100%;
   height: 80px;
@@ -552,4 +560,11 @@ html table {
 
  #floor_goods_wrap_li a img{
   margin-top: 50px;
+
 }
+
+
+
+
+
+
