--- a/src/main/web/css/xiaomi.css
+++ b/src/main/web/css/xiaomi.css
@@ -268,7 +268,7 @@ html table {
   position: absolute;
   top: 0px;
   left: 250px;
-  color: #ffffff; }
+  color: white; }
 #big_banner_wrap #big_banner_change_wrap div {
   display: none;
   transition: all 3s;
@@ -276,9 +276,9 @@ html table {
   -moz-transition: all .3s;
   -ms-transition: all .3s; }
 #big_banner_wrap #big_banner_change_wrap div:hover {
-  background: #333333;
+  /*background: #333333;*/
   cursor: pointer;
-  color: #FF6700; }
+  color: white; }
 #big_banner_wrap #big_banner_change_wrap #big_banner_change_prev {
   width: 50px;
   height: 50px;
@@ -562,7 +562,6 @@ html table {
   margin-top: 50px;
 
 }
-
 
 
 
